fixing spacing

--- a/style.css
+++ b/style.css
@@ -54,9 +54,9 @@ table {
 }
 
 #main {
-  width: 84em;
+  width: 64em;
   margin: 0px auto;
-  position: relative;
+  position: center;
   min-height: 100vh;
 }
 
